--- a/templates/partials/vendor_navbar.html
+++ b/templates/partials/vendor_navbar.html
@@ -19,7 +19,7 @@
                                 <div class="dropdown">
                                     <a class="dropdown-toggle notifications" data-bs-toggle="dropdown"
                                         aria-expanded="false">
-                                        <i class="fa fa-bell" style="font-size:24px"></i>
+                                        <i class="fa fa-bell" aria-hidden="true"></i>
                                         <span class="badge">{% live_notify_badge %}</span>
                                     </a>
                                     <ul class="dropdown-menu dropdown-notifications">
