--- a/templates/shops/add_products.html
+++ b/templates/shops/add_products.html
@@ -18,11 +18,11 @@
                 <!-- Dashboard-Nav  Start-->
                 <div class="dashboard-nav">
                     <ul class="list-inline">
-                        <li class="list-inline-item"><a href="billing-information.html" class="active">Add Product</a>
+                        <li class="list-inline-item"><a href="" class="active">Add Product</a>
                             <i class="fas fa-angle-right"></i></li>
-                        <li class="list-inline-item"><a href="shipping.html">Add Varations</a> <i
+                        <li class="list-inline-item"><a href="">Add Varations</a> <i
                                 class="fas fa-angle-right"></i></li>
-                        <li class="list-inline-item"><a href="payment.html" class="mr-0">Add Images</a></li>
+                        <li class="list-inline-item"><a href="" class="mr-0">Add Images</a></li>
                     </ul>
                 </div>
                 <!-- Dashboard-Nav  End-->
