--- a/templates/shops/product_page.html
+++ b/templates/shops/product_page.html
@@ -52,10 +52,10 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="product-description my-3"> 
+                    <div class="product-description my-3">
                         <p class="pr-5" style="text-align: justify">{{product.description|safe }}</p>
                     </div>
-                   
+
 
                     <div class="product-pricelist-selector">
                         <div class="product-pricelist-selector-quantity">
@@ -87,19 +87,19 @@
                         <div class="col-12">
                             <form>
                                 <div class="form-group row">
-                                    {% if product.images.all.count != 0 %}
+
                                     {% for val in product.attributes.all %}
                                     <div id="{{val.id}}-card" class="card mb-4 col-12 col-md-4 mx-1"
                                         style="border-color: {{ val.color.color_code }}">
                                         <div class="card-body" role="button">
-                                            <h5 class="card-title"><input id="{{val.id}}" type="radio" >
+                                            <h5 class="card-title"><input id="{{val.id}}" type="radio">
                                                 <label for="price">Rs {{ val.product_price }}</label></h5>
                                             <p class="card-text"> product color: {{ val.color.title }}</p>
                                         </div>
                                     </div>
 
                                     {% endfor %}
-                                    {% endif %}
+
                                 </div>
                             </form>
                         </div>
@@ -470,6 +470,8 @@
             removeActive();
             makeActive(inputElement);
             clickRadio(inputElement);
+            $('#add-to-cart').css('display', 'inline');
+            $('#checkout').css('display', 'inline');
         });
     });
 
